Updated Solr, updated Java, fixed small bugs